2008-06-02 Josh Kropf <josh.kropf@sonamobile.com>

    * version 0.3
    * JavaPpTask.java (verbose): new property, output verbose logging
      (execute): print source file name in verbose mode
      (execute): check modification time of destination file to optimize loop


2008-06-02 Josh Kropf <josh.kropf@sonamobile.com>

    * version 0.2
    * JavaPpTask.java (execute): create parent directory of destination files
    * javapp.py: added undefine directive