@@ -1,0 +1,32 @@
+/*
+ * Copyright 2008 Josh Kropf
+ * 
+ * This file is part of javapp.
+ * 
+ * javapp is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
+ * 
+ * javapp is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ * 
+ * You should have received a copy of the GNU General Public License
+ * along with javapp; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
+ */
+package ca.slashdev.javapp;
+
+import org.python.core.PyException;
+
+/**
+ * 
+ * @author josh.kropf
+ */
+public class JavaPpException extends Exception {
+   public JavaPpException(PyException cause) {
+      super(cause.value.__str__().toString());
+   }
+}
